Fixed grid column spacing fix. No need for class gp_gridLastColumn anymore.

--- a/Website/internal/css/gp_grid-fixed.less
+++ b/Website/internal/css/gp_grid-fixed.less
@@ -7,8 +7,8 @@
 
 
 .gp_gridRow.gp_gridFixed {
-	.gp_gridColumn.gp_gridLastColumn  {
-	    margin-right:0;
+	.gp_gridColumn:first-child  {
+	    margin-left: 0;
 	}
 	
 	.gp_gridColumn1 {
